--- a/.env
+++ b/.env
@@ -24,8 +24,8 @@ APP_SECRET=f4ea3a494cff09f800e039c64281c9bf
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
-# DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8.0.32&charset=utf8mb4"
-DATABASE_URL="mysql://root:@127.0.0.1:3306/first?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
+DATABASE_URL="mysql://root:@127.0.0.1:3306/task?serverVersion=8.0.32&charset=utf8mb4"
+#DATABASE_URL="mysql://root:@127.0.0.1:3306/task?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
 # DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=16&charset=utf8"
 ###< doctrine/doctrine-bundle ###
 
